Fixed the Add a Book icon issue
Issue : the icon to add was not showing up as the CSS for class open-search was having style definition a child for a button and not for anchor element. updated to remove button and change it to a anchor element.

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ body, .app {
   bottom: 25px;
 }
 
+/*
 .open-search button {
   display: block;
   width: 50px;
@@ -67,9 +68,32 @@ body, .app {
   font-size: 0;
   outline: 0;
 }
+*/
 
+.open-search a {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #2e7d32;
+  background-image: url('./icons/add.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 28px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  font-size: 0;
+  outline: 0;
+}
+
+
+/*
 .open-search button:hover {
   background-color: rgb(0, 102, 0);
+}
+*/
+
+.open-search a:hover {
+  background-color: rgb(0, 180, 0);
 }
 
 
@@ -111,7 +135,13 @@ body, .app {
   font-size: 0;
   border: none;
   outline: none;
+  border-radius: 50%
 }
+
+a.close-search:hover {
+  background-color: beige;
+}
+
 
 button:active {
   border: red;
